src/objects/Non_Publication_Day__c.object
<CustomObject>
    <fields>
        <fullName>Non_Publication_Date__c</fullName>
        <label>Non Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Non Publication Days</relationshipLabel>
        <relationshipName>Non_Publication_Days</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Non Publication Day</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Non_Publication_Date__c</columns>
        <columns>Publication__c</columns>
        <columns>Publication_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Non Publication Day Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Publication Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>